Changing name  karki-academy

--- a/building-website-nodejs-express-master/package.json
+++ b/building-website-nodejs-express-master/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "roux-academy",
+  "name": "karki-academy",
   "version": "1.0.0",
   "description": "Website Development with Node and Express",
   "main": "server.js",
