--- a/building-website-nodejs-express-master/package.json
+++ b/building-website-nodejs-express-master/package.json
@@ -4,12 +4,23 @@
   "description": "Website Development with Node and Express",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon --ignore feedback.json server.js"
   },
   "keywords": [],
   "author": "Sachham Karki",
   "license": "VU",
   "dependencies": {
+    "cookie-session": "^2.0.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.7.1"
   }
 }
